--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-      gtag('config', 'G-XXXXXXXXXX', {
+      gtag('config', 'G-5NC3F2GFGJ', {
         page_path: window.location.pathname,
       });
     </script>
