Update logo references and enhance SEO metadata in index.html and what-is-bimi/index.html
- Changed favicon and apple-touch-icon to use a PNG logo for better compatibility.
- Updated Open Graph and Twitter card images to point to the new logo.
- Added alt text for Open Graph and Twitter images to improve accessibility and SEO.

--- a/public/what-is-bimi/index.html
+++ b/public/what-is-bimi/index.html
@@ -24,6 +24,8 @@
       property="og:description"
       content="BIMI ties brand logos to strong email authentication. Learn what BIMI is, why it exists, how it works, and when it’s worth the effort."
     />
+    <meta property="og:image" content="https://verifybimi.com/logo.png" />
+    <meta property="og:image:alt" content="VerifyBIMI logo" />
     <meta property="og:site_name" content="VerifyBIMI" />
 
     <!-- Twitter -->
@@ -33,6 +35,7 @@
       property="twitter:description"
       content="A practical guide to BIMI: what it is, why it exists, requirements, DNS records, SVG rules, VMCs, and whether it’s worth it."
     />
+    <meta property="twitter:image" content="https://verifybimi.com/logo.png" />
 
     <style>
       :root {
